<resources>
    <string name="app_name">BorrowMe</string>
    <string name="notification_channel_description">This is a sample notification channel for demonstration purpose.
    </string>
    <string name="notification">Notificação</string>
    <string name="title_activity_my_menu">my_menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="emprestar">Emprestar</string>
    <string name="nome_do_produto">Nome produto</string>
    <string name="textViewData"> 22 \n Abril</string>
    <string name="textview_nome"> Nome: </string>
    <string name="textview_nome_pessoa">Higor Chaves</string>
    <string name="textview_parentesco">Parentesco: </string>
    <string name="text_view_tipo_pessoa">Amigo</string>
</resources>
